styles/global.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

html, 
body {
    background-color: #FCFCFC;
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    min-height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

main {
    flex: 1 0 auto;
    margin-top: 2.5em;
}

/* Typography */

h1 {
    text-transform: capitalize;
}

/* Links */

a {  
    color: #1C1C1C;
}

a:hover {
    color: #555;
}

a:active {
    color: #555;
}

a:focus {
    color: #555;
}

a.img-link:hover,
a.img-link:focus {
    opacity: 0.85;
    z-index: 1;
}

/* Flex Containers */

section.hero,
section.blog {
    display: flex;
    padding: 1.25em;
}

/* Nav */ 

header {
    position: relative;
    width: 100%;
}

nav,
nav > div.container,
nav ul {
    display: flex;
    align-items: center;
    gap: 0.188em;
}

nav {
    z-index: 1;
    justify-content: space-between;
    background-color: #ECECEC;
    position: fixed;
    width: 100%;
    font-size: 0.75rem;
    font-weight: bold;
    padding: 0 1.25em;
}

nav ul {
    list-style-type: none;
    gap: 2.5em;
}

nav li {
    text-transform: uppercase;
}

nav img {
    width: 1.438em;
    height: 1.438em;
}

nav a {
    text-decoration: none;
}

/* Blogs */

section.blog {
    flex-wrap: wrap;
    gap: 1em;
    padding: 1em;
}

section.blog > article {
    display: flex;
    flex-basis: 300px;
    flex-grow: 1;
}

a img {
    margin: 0;
    padding: 0;
    display: block;
}

.blog-text {
    display: flex;
    flex-direction: column;
    gap: 0.563em;
}

div.blog-text > time {
    display: block;
    text-transform: uppercase;
    margin-top: 1.2em;
}

main > div.view-more-section {
    font-weight: 700;
    color: #1C1C1C;
    margin-top: 1em;
    margin-bottom: 2.688em;
    text-align: center;
}

div.blog-container > a > img {
    width: 100%;
}

/* Footer */

footer {
    flex-shrink: 0;
    width: 100%;
}

footer > h2,
footer > p {
    font-size: 0.75rem;
}

footer > p {
    color: #D7D7D7;
}

footer {
    color: #ECECEC;
    padding: 2.313em 0;
    text-align: center;
    background-color: #202020;
}

/* Utility */

.m0 {
    margin: 0;
}

/* Media Queries */

@media (min-width: 620px) {
    nav {
        padding: 0.5em 1.75em;
    }

    section.hero,
    section.blog {
        padding: 1.75em;
    }

    section.hero {
        background-image: url("/images/article-image-hero-large.jpg");
        min-height: 391px;
    }

    section.hero > p {
        width: 70%;
    }
}

@media (min-width: 850px) {
    nav {
        padding: 1em 2.75em;
    }

    main {
        max-width: 1080px;
        margin: 0 auto;
    }

    section.hero,
    section.blog {
        padding: 2.75em;
    }

    section.hero > p {
        width: 60%;
    }

    section.blog {
        gap: 1.75em;
    }

    section.hero {
        min-height: 488px;
    }
}

